fixed picture gallery not showing on kleinanzeigen.de

--- a/gpunktstyle.css
+++ b/gpunktstyle.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name         gpunktstyle
 @namespace    https://github.com/gpunktschmitz
-@version      0.12.0
+@version      0.12.1
 @description  My style for the www
 @author       Guenther Schmitz
 
@@ -128,7 +128,7 @@ div.privacy-consent--modal, div.privacy-consent--backdrop {
 }
 
 @-moz-document domain("kleinanzeigen.de") {
-div[class^="mfp-"], div#consentBanner, div.login-overlay, div#liberty-my_ads-top-banner, div#liberty-home-billboard, section#home-gallery, div#brws_banner-supersize, div.srp-header, div.j-zsrp-infobox, [data-liberty-position-name=home-billboard], [data-liberty-position-name^=my][data-liberty-position-name$=top-banner], [data-liberty-position-name^=vip][data-liberty-position-name$=billboard], section#vap-smlrads {
+div#consentBanner, div.login-overlay, div#liberty-my_ads-top-banner, div#liberty-home-billboard, section#home-gallery, div#brws_banner-supersize, div.srp-header, div.j-zsrp-infobox, [data-liberty-position-name=home-billboard], [data-liberty-position-name^=my][data-liberty-position-name$=top-banner], [data-liberty-position-name^=vip][data-liberty-position-name$=billboard], section#vap-smlrads {
     display: none !important;
     visibility: hidden !important;
 }
